[gd_scene load_steps=6 format=3 uid="uid://cijffdt1fo0ot"]

[ext_resource type="Script" uid="uid://eidw6jkqfbvq" path="res://bullet_new.gd" id="1_3qgql"]
[ext_resource type="Texture2D" uid="uid://dhfjumeo8bx3w" path="res://Assets/tracer.png" id="2_8r4do"]
[ext_resource type="Texture2D" uid="uid://hccyxo0hsydq" path="res://Assets/bullet.png" id="3_8anfi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u8st5"]
radius = 1.0
height = 6.0

[sub_resource type="ViewportTexture" id="ViewportTexture_7281b"]
viewport_path = NodePath("SubViewport")

[node name="BulletNew" type="Area2D"]
top_level = true
light_mask = 2
visibility_layer = 2
script = ExtResource("1_3qgql")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(160, 3)
render_target_update_mode = 4

[node name="Tracer2" type="Sprite2D" parent="SubViewport"]
self_modulate = Color(1, 1, 1, 0.803922)
texture_filter = 1
texture = ExtResource("2_8r4do")
centered = false
offset = Vector2(0, 1)

[node name="Bullet" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("3_8anfi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_u8st5")

[node name="Tracer" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-162, -2)
texture = SubResource("ViewportTexture_7281b")
centered = false
offset = Vector2(0, 0.5)

[node name="SplatterTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="SlomoSplatterTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SplatterTimer" to="." method="_on_splatter_timer_timeout"]
[connection signal="timeout" from="SlomoSplatterTimer" to="." method="_on_slomo_splatter_timer_timeout"]
